# Book-Cover-Speed-Dating

./: .gitignore  GEMINI.md  README.md  api-contract-validator.skill
.gemini/: settings.json
.gemini/skills/api-contract-validator/: SKILL.md
.gemini/skills/api-contract-validator/references/: contract_spec.md  open_library_api.md
.gemini/skills/api-contract-validator/scripts/: check_open_library.py
backend/: Pipfile  README_LAMBDA.md  main.py  pyproject.toml  requirements.txt  template.yaml
backend/app/: api.py  main.py  models.py
backend/tests/: test_api.py
frontend/: pubspec.yaml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/bloc/: book_swipe_bloc.dart
frontend/lib/components/: book_cover_card.dart  book_details_overlay.dart
frontend/lib/models/: book.dart
frontend/lib/networking/: dio_client.dart
frontend/lib/networking/api/: book_api.dart
frontend/lib/networking/dto/: book_detail_dto.dart  book_dto.dart  book_response.dart
frontend/lib/screens/: book_swipe_screen.dart
frontend/lib/utils/: constants.dart
infra/: backend.tf  frontend.tf  main.tf  outputs.tf  providers.tf  variables.tf
